--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
-    "crypto-js": "^4.2.0",
+    "@react-oauth/google": "^0.12.1",
     "date-fns": "^3.5.0",
     "react": "^18.2.0",
-    "react-cookie": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.2",
