--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@react-oauth/google": "^0.12.1",
+    "@stripe/react-stripe-js": "^2.7.0",
+    "@stripe/stripe-js": "^3.3.0",
     "date-fns": "^3.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
