--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "echarts": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flags-select": "^2.2.3",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.2",
+    "react-toastify": "^10.0.5",
     "sass": "^1.71.1",
     "storybook": "^8.0.4",
     "vite-plugin-svgr": "^4.2.0",
