--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.4",
     "@stripe/react-stripe-js": "^2.7.0",
     "@stripe/stripe-js": "^3.3.0",
     "date-fns": "^3.5.0",
@@ -25,8 +26,10 @@
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
     "react-hook-form": "^7.51.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.2",
     "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
     "sass": "^1.71.1",
     "storybook": "^8.0.4",
     "vite-plugin-svgr": "^4.2.0",
