--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
     "react-hook-form": "^7.51.0",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.2",
     "react-toastify": "^10.0.5",
