--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "dev": "vite",
     "preview": "vite preview",
     "build": "tsc && vite build",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'"
   },
@@ -23,9 +21,10 @@
     "date-fns": "^3.5.0",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-flags-select": "^2.2.3",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
@@ -33,23 +32,13 @@
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "sass": "^1.71.1",
-    "storybook": "^8.0.4",
     "vite-plugin-svgr": "^4.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.2.25",
-    "@storybook/addon-essentials": "^8.0.4",
-    "@storybook/addon-interactions": "^8.0.4",
-    "@storybook/addon-links": "^8.0.4",
-    "@storybook/addon-onboarding": "^8.0.4",
-    "@storybook/blocks": "^8.0.4",
-    "@storybook/builder-vite": "^8.0.4",
-    "@storybook/react": "^8.0.4",
-    "@storybook/react-vite": "^8.0.4",
-    "@storybook/test": "^8.0.4",
     "@tanstack/eslint-plugin-query": "^5.28.11",
     "@types/crypto-js": "^4.2.2",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
@@ -60,7 +49,6 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "eslint-plugin-storybook": "^0.8.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   },
