--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.633.0",
     "@hookform/resolvers": "^3.3.4",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.4",
@@ -32,6 +33,7 @@
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "sass": "^1.71.1",
+    "uuid": "^10.0.0",
     "vite-plugin-svgr": "^4.2.0",
     "zod": "^3.22.4"
   },
@@ -42,6 +44,7 @@
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
