--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "echarts-for-react": "^3.0.2",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
@@ -42,6 +43,7 @@
     "@tanstack/eslint-plugin-query": "^5.28.11",
     "@types/crypto-js": "^4.2.2",
     "@types/file-saver": "^2.0.7",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
